--- a/mission_manager/views/mission_manager.xml
+++ b/mission_manager/views/mission_manager.xml
@@ -58,6 +58,7 @@
         <field name="model">mission.manager.head</field>
         <field name="arch" type="xml">
             <tree default_order="days asc"
+                    decoration-muted ="state == 'done'"
                     decoration-info="days &lt; 30"
                     decoration-success="days &lt; 15"
                     decoration-danger="days &lt; 7"
