--- a/mission_manager/views/mission_manager.xml
+++ b/mission_manager/views/mission_manager.xml
@@ -22,6 +22,7 @@
                             <field name="create_uid" attrs="{'readonly':True}"/>
                             <field name="create_date" attrs="{'readonly':True}"/>
                             <field name="type" attrs="{'required':True}"/>
+                            <field name="priority"  attrs="{'required':True}"/>
                             <field name="state" attrs="{'readonly':True}"/>
                         </group>
                         <group>
@@ -41,6 +42,8 @@
                                     <field name="line_number" attrs="{'required':True}"/>
                                     <field name="point_from_id" attrs="{'readonly':True}"/>
                                     <field name="point_to_id" attrs="{'required':True}"/>
+                                    <field name="create_date" attrs="{'required':True}"/>
+                                    <field name="used_time"/>
                                     <field name="description"/>
                                     <field name="state" attrs="{'required':True}"/>
                                     <field name="attachments_ids" widget="many2many_binary"/>
