增加任务跳转字段

--- a/mission_manager/views/mission_manager.xml
+++ b/mission_manager/views/mission_manager.xml
@@ -15,6 +15,7 @@
                         <h2>
                             <field name="rdc_number"/>
                         </h2>
+                        <field name="rdc_url" widget="url"/>
                     </div>
                     <group>
                         <group>
